--- a/Веб-разработка/7.Приложения/index.html
+++ b/Веб-разработка/7.Приложения/index.html
@@ -22,7 +22,7 @@
             <li class="header__item"><a class="header__link" href="#">Выберите кошелек:</a></li>
             <li class="header__item"><a class="header__link" href="#">Телефон для связи:8 (800) 200-10-63.</a></li>
             <li class="header__item"><a class="header__link" href="#">Мы работаем ежедневно, с 10:00–21:00.</a></li>
-            <li class="header__item"><a class="header__link" href="#">Адрес:ул.Михайловская дом 40/7 3й этаж.</a></li>
+            <!-- <li class="header__item"><a class="header__link" href="#">Адрес:ул.Михайловская дом 40/7 3й этаж.</a></li> -->
             <li class="header__item"><a class="header__link" href="#">Особенность:</a></li>
             <li class="header__item"><a class="header__link" href="https://t.me/s/kariofficial">Наш Telegram:</a></li>
         </ul>
