--- a/Веб-разработка/2.Содержание дипломного проекта/Содержание.html
+++ b/Веб-разработка/2.Содержание дипломного проекта/Содержание.html
@@ -1,5 +1,11 @@
-Структура дипломной работы 1.Титульный лист дипломного проекта 2.Содержание
-дипломного проекта 3.Введение 4.Основная часть 5.Заключение 6.Список
-использованной литературы и ресурсов 7.Приложения 8.Презентация к дипломного
-проекта Вся работа должна составлять 50+ страниц формата А4. Это текст, графики,
+  Структура дипломной работы 
+1.Титульный лист дипломного проекта 
+2.Содержание дипломного проекта 
+3.Введение 
+4.Основная часть 
+5.Заключение 
+6.Список использованной литературы и ресурсов 
+7.Приложения 
+8.Презентация к дипломного проекта 
+Вся работа должна составлять 50+ страниц формата А4. Это текст, графики,
 диаграммы, схемы и прочее.
