--- a/Веб-разработка/2.Содержание дипломного проекта/Содержание.html
+++ b/Веб-разработка/2.Содержание дипломного проекта/Содержание.html
@@ -3,9 +3,17 @@
 2.Содержание дипломного проекта 
 3.Введение 
 4.Основная часть 
+4.1.Информационное обеспечение
+4.2.Лингвистическое обеспечение
+4.3.Методическое обеспечение
+4.4.Программное обеспечение
+4.5.Техническое обеспечение
+4.6.Промышленная экология
+4.7.Мероприятие по охране труда и технике безопасности
+4.8.Технико-Экономическое обоснование
 5.Заключение 
 6.Список использованной литературы и ресурсов 
 7.Приложения 
 8.Презентация к дипломного проекта 
-Вся работа должна составлять 50+ страниц формата А4. Это текст, графики,
+9.Вся работа должна составлять 50+ страниц формата А4. Это текст, графики,
 диаграммы, схемы и прочее.
