--- a/Веб-разработка/1.Титульный лист/list.html
+++ b/Веб-разработка/1.Титульный лист/list.html
@@ -1,3 +1,5 @@
-"Дипломный проект" студента 1 года обучения специальности “Разработчик python”
-Цмыг Артёма Сергеевича. 02.11.2023 года Дипломный проект "Веб-разработка.
+                    "Дипломный проект" 
+студента 1 года обучения специальности “Разработчик python”
+Цмыг Артёма Сергеевича. 02.11.2023 года 
+Дипломный проект "Веб-разработка.
 Создание сайта магазина"
